2006-11-07  Akim Demaille  <demaille@gostai.com>

	posix -> engine
	* urbi-dirs.m4: Expect engine, not posix as an urbi_env.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	nostdinc
	* urbi-engine.ac: Pass it to Automake.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Execute URBI_LIBPORT earlier
	* urbi-engine.ac: to catch cmd line error earlier.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Work around AC_REQUIRE issues
	* urbi-engine.m4: Rename as...
	* urbi-engine.ac: this.
	Adjust to be included, not to define a macro.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Fixes and improvements
	* ax-prefix-config-h.m4: Use config_headers, not CONFIG_HEADERS,
	since the former contains all the declared headers, while the latter
	contains only those about to be instantiated.
	* urbi-config-headers-prefixed.m4 (URBI_PREFIX_CONFIG_H): New.
	* urbi-libport.m4: Require the instantiation of libport/config.h.
	* build-aux.mk: Remove libport svn sugar.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	SVN
	* urbi-build-aux.m4 (SVN): Define it.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Define LIBPORT_CPPFLAGS
	* urbi-libport.m4: Do that.
	* init.mk (EXTRA_HEADERS): New.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Simplify
	* config-headers-prefixed.mk: No need for a stamp file.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	URBI_CONFIG_HEADERS_PREFIXED
	* config-headers-prefixed.mk, urbi-config-headers-prefixed.m4: New.
	* ax-prefix-config-h.m4: New.
	* README: Complete.
	* urbi-build-aux.m4: Don't issue AC_CONFIG_AUX_DIR here until
	libtoolize support traces.

2006-11-06  POTHIER Benoit  <pothier@gostai.com>

	Fix QT resource generation.
	* autotroll.mk: RCC instead of QRC.

2006-11-06  Akim Demaille  <akim@lrde.epita.fr>

	More Make macros, easier distcheck
	* urbi-dirs.m4 (SDK_CPPFLAGS, SDK_LDFLAGS): New.
	* init.mk (AM_LIBADD): Remove, Automake 1.10 doesn't like its name.
	* build-aux.mk: Include init.mk.